fix(chromium): :lipstick: fix ghost scrollbar on `chromium`

--- a/src/style/stylesheet.css
+++ b/src/style/stylesheet.css
@@ -55,6 +55,7 @@ html {
 		"Helvetica Neue",
 		"Noto Sans",
 		sans-serif;
+	overflow: overlay;
 }
 
 #options {
